# dev-cpp

./: .gitignore  Dockerfile  build.sh  clean.ps1  docker-compose.yaml  docker.ps1  startup.sh
ServerClient/: TODO.txt  deploy.sh
ServerClient/Client/: CMakeLists.txt
ServerClient/Server/: CMakeLists.txt
ServerClient/Server/src/: main.cpp
TEMPLATE/: main.cpp
accumulate/: CMakeLists.txt
accumulate/src/: main.cpp
async_shared_ptr/: CMakeLists.txt
async_shared_ptr/src/: main.cpp
atomic/: CMakeLists.txt
atomic/src/: main.cpp
attributes/: CMakeLists.txt
attributes/src/: main.cpp
bit_cast/: CMakeLists.txt
bit_cast/src/: main.cpp
boost/: CMakeLists.txt
boost/src/: main.cpp
boost_asio/: CMakeLists.txt
boost_asio/src/: main.cpp
boost_log/: CMakeLists.txt
boost_log/src/: main.cpp
c_style_2d_array/: main.cpp
clamp/: CMakeLists.txt
clamp/src/: main.cpp
class_default/: CMakeLists.txt
class_default/src/: main.cpp
comparision/: CMakeLists.txt
comparision/src/: main.cpp
concept_with_ranges/: CMakeLists.txt
concept_with_ranges/src/: main.cpp
concepts/: CMakeLists.txt
concepts/src/: main.cpp
consteval_constinit/: CMakeLists.txt
consteval_constinit/src/: main.cpp
constexpr/: CMakeLists.txt
constexpr/src/: main.cpp
containers_sequence_vs_associative/: CMakeLists.txt
containers_sequence_vs_associative/src/: main.cpp
convert_array_into_tumple/: CMakeLists.txt
convert_array_into_tumple/src/: main.cpp
copy_if/: CMakeLists.txt
copy_if/src/: main.cpp
core_dump/: CMakeLists.txt  Makefile
core_dump/src/: main.cpp
crtp/: main.cpp
dead_lock/: CMakeLists.txt
dead_lock/src/: main.cpp
declare_define_intialize/: CMakeLists.txt
declare_define_intialize/src/: main.cpp
declval_decltype/: CMakeLists.txt
declval_decltype/src/: main.cpp
designated_initializer/: CMakeLists.txt
designated_initializer/src/: main.cpp
dp_adapter/: CMakeLists.txt
dp_adapter/src/: main.cpp
dp_builder/: CMakeLists.txt
dp_builder/src/: main.cpp
dp_decorator/: CMakeLists.txt
dp_decorator/src/: main.cpp
dp_factory_method/: CMakeLists.txt
dp_factory_method/src/: main.cpp
dp_observer/: CMakeLists.txt
dp_observer/src/: main.cpp
dp_proxy/: CMakeLists.txt
dp_proxy/src/: main.cpp
dp_singleton/: CMakeLists.txt
dp_singleton/src/: main.cpp
dp_strategy/: CMakeLists.txt
dp_strategy/src/: main.cpp
duration_cast/: CMakeLists.txt
duration_cast/src/: main.cpp
exchange/: CMakeLists.txt
exchange/src/: main.cpp
explicit_bool/: CMakeLists.txt
explicit_bool/src/: main.cpp
factorial/: CMakeLists.txt
factorial/src/: main.cpp
final/: CMakeLists.txt
final/src/: main.cpp
fold_expression/: CMakeLists.txt
fold_expression/src/: main.cpp
format/: CMakeLists.txt
format/src/: main.cpp
functional/: CMakeLists.txt
functional/src/: main.cpp
functors/: CMakeLists.txt
functors/src/: main.cpp
generic_factory_function/: CMakeLists.txt
generic_factory_function/src/: main.cpp
gtest/: CMakeLists.txt
gtest/src/: main.cpp
initializer_list/: CMakeLists.txt
initializer_list/src/: main.cpp
invoke/: CMakeLists.txt
invoke/src/: main.cpp
is_constant_evaluated/: CMakeLists.txt
is_constant_evaluated/src/: main.cpp
lambda/: CMakeLists.txt
lambda/src/: main.cpp
multiprocessing_linux/: CMakeLists.txt
multiprocessing_linux/src/: main.cpp
my_allocator/: CMakeLists.txt  Makefile
my_allocator/src/: main.cpp
my_file_descriptor_unix_c/: CMakeLists.txt
my_file_descriptor_unix_c/src/: main.cpp
my_forward_move_removeref/: CMakeLists.txt
my_forward_move_removeref/src/: main.cpp
my_map/: CMakeLists.txt  Makefile
my_map/src/: main.cpp
my_queue/: main.cpp
my_shared_ptr/: CMakeLists.txt  Makefile  main.cpp
my_unordered_map/: CMakeLists.txt
my_unordered_map/src/: main.cpp
my_vector_gdb/: CMakeLists.txt
my_vector_gdb/app/: CMakeLists.txt  main.cpp
my_vector_gdb/src/Vector/: CMakeLists.txt  Vector.cpp  Vector.hpp
namespace/: CMakeLists.txt
namespace/src/: main.cpp
new_operator/: CMakeLists.txt
new_operator/src/: main.cpp
null_vs_nullptr/: CMakeLists.txt
null_vs_nullptr/src/: main.cpp
openssl/: CMakeLists.txt
openssl/src/: main.cpp
optional/: CMakeLists.txt
optional/src/: main.cpp
parallel_algorithms_with_execution_policies/: CMakeLists.txt
parallel_algorithms_with_execution_policies/src/: main.cpp
perfect_forwarding/: CMakeLists.txt
perfect_forwarding/src/: main.cpp
ping_pong/: main.cpp
random/: CMakeLists.txt
random/src/: main.cpp
ranges_std_views/: CMakeLists.txt
ranges_std_views/src/: main.cpp
ref/: CMakeLists.txt
ref/src/: main.cpp
reference_cycle_problem/: CMakeLists.txt  Makefile  main.cpp
rvalue_reference/: CMakeLists.txt
rvalue_reference/src/: main.cpp
sfinae_and_type_traits/: CMakeLists.txt
sfinae_and_type_traits/src/: main.cpp
shared_ptr_and_weak_ptr/: CMakeLists.txt
shared_ptr_and_weak_ptr/src/: main.cpp
smart_logging/: CMakeLists.txt
smart_logging/src/: main.cpp
span/: CMakeLists.txt
span/src/: main.cpp
stack_vs_queue/: CMakeLists.txt
stack_vs_queue/src/: main.cpp
static_analysis/: CMakeLists.txt  Makefile  main.plist
static_analysis/src/: main.cpp
static_assert/: CMakeLists.txt
static_assert/src/: main.cpp
static_vs_reinterpret_cast/: CMakeLists.txt  Makefile
static_vs_reinterpret_cast/src/: main.cpp
string_view/: CMakeLists.txt
string_view/src/: main.cpp
strongly_typed_enums/: CMakeLists.txt
strongly_typed_enums/src/: main.cpp
template_argument_deduction/: CMakeLists.txt
template_argument_deduction/src/: main.cpp
thread_pool/: CMakeLists.txt
thread_pool/src/: main.cpp
trailing_return_types/: CMakeLists.txt  Makefile
trailing_return_types/src/: main.cpp
tuple/: CMakeLists.txt
tuple/src/: main.cpp
typedef_vs_using/: CMakeLists.txt
typedef_vs_using/src/: main.cpp
unnamed_namespace/: CMakeLists.txt
unnamed_namespace/src/: main.cpp  source.cpp
variant/: CMakeLists.txt
variant/src/: main.cpp
virtual_destructor/: CMakeLists.txt
virtual_inheritance_diamond/: main.cpp
(+2 files in other folders)
